2020-06-08  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* uwers/24909: Src/exec.c: Don't clean up files used for
	substitution until after function has run.

2020-06-08  Doron Behar  <doron.behar@gmail.com>

	* gitlab !14 (fixup): Completion/Linux/Command/_modutils:
	modutils comp: Fix getting the value of kver from opt_args

2020-06-07  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 45932: Etc/FAQ.yo: FAQ (3.1): Update ksh compatibility answer
	for reserved word typeset.

	* 45933: Etc/FAQ.yo: FAQ: Add "Why does my bash script report
	an error when I run it under zsh?".

	* 45791 (tweaked): Etc/FAQ.yo, Util/zyodl.vim: FAQ: Explain
	how to binary search one's dotfiles

	* unposted: Etc/FAQ.yo: FAQ: Update section number in links to
	the "The future of zsh" section.

2020-06-06  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Etc/BUGS: Add users/24904 to Etc/BUGS (a process
	substitution / forking issue).

2020-06-05  Mikael Magnusson  <mikachu@gmail.com>

	* 45985: Src/builtin.c: typeset: Fix leaving corrupted entries
	in paramtab

2020-06-03  Yasuhiro KIMURA  <yasu@utahime.org>

	* 45950: configure.ac: Fix 'make install' in out-of-tree
	tarball builds.

2020-06-01  Matthew Martin  <phy1729@gmail.com>

	* 45940: Completion/BSD/Command/_kdump,
	Completion/BSD/Command/_ktrace,
	Completion/BSD/Type/_ktrace_points: Add _kdump and _ktrace
	completers and supporting _ktrace_points type.

	* 45939: Completion/Linux/Command/_ionice,
	Completion/Unix/Command/_lsof, Completion/Unix/Command/_pgrep,
	Completion/Unix/Command/_renice, Completion/Unix/Type/_pgids:
	Add _pgids type.

2020-06-01  Doron Behar  <doron.behar@gmail.com>

	* gitlab !14: Completion/Linux/Command/_modutils: modutils
	completion: Fix getting the value of kver from opt_args

2020-05-30  Bart Schaefer  <schaefer@zsh.org>

	* 45915: Src/utils.c: fix handling of hyphens in spckword()

2020-05-28  Yasuhiro KIMURA  <yasu@utahime.org>

	* 45934: Completion/Unix/Command/_subversion: Make 'svnliteadmin'